[project]
name = "rehab-app-ingestion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "openai>=2.8.1",
    "openai-agents>=0.6.1",
    "pandas>=2.3.3",
]

[tool.uv]
dev-dependencies = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "mypy",
  "httpx",
  "types-requests"
]

[tool.uv.workspace]
members = [
  "packages/common", 
  "packages/npi-puller",
  "packages/enricher",
  "packages/admin-api"
]
